fix: Deferred errors after massive audit #1 + #3
